Fix scroll issue on smaller devices

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -397,6 +397,7 @@ footer .footer-below {
 }
 
 .scroll-top .btn {
+    box-shadow: rgba(0, 0, 0, 0.14) 0px 3px 3px 0px, rgba(0, 0, 0, 0.12) 0px 1px 7px 0px, rgba(0, 0, 0, 0.2) 0px 3px 1px -1px;
     width: 50px;
     height: 50px;
     border-radius: 100%;
